branches/ConvertTo2010Express/src/MoonRoad/System.h


void WINAPI RemoveSystemMenu(HWND hWnd);

void WINAPI AddRemoveMessageFilter(UINT message, DWORD dwFlags);

LRESULT CALLBACK LayeredWndProc(HWND hWnd, UINT message, WPARAM wParam, LPARAM lParam);

void WINAPI DrawLayeredWindow(HWND handle, int left, int top, int width, int height, HDC buffer, COLORREF colorKey, byte alpha, BOOL redrawOnly);


BOOL WINAPI GetStartup(LPCWSTR appName);

void WINAPI SetStartup(LPCWSTR appName, LPCWSTR appPath);

void WINAPI RemoveStartup(LPCWSTR appName);