src/MoonRoad/MoonRoad.h


BOOL WINAPI StartEngine(HWND handle, LPWSTR applicationName);


BOOL WINAPI Matches(LPWSTR itemText, LPWSTR searchText);