branches/ConvertTo2010Express/src/MoonRoad/FileOperations.h


typedef VOID (CALLBACK* FOLDERENUMPROC)(LPWSTR fileName, LPARAM lParam);


void WINAPI CreateUnicodeFile(LPCWSTR fileName);

BOOL WINAPI IsUnicodeFile(LPCWSTR fileName);

BOOL WINAPI FileExists(LPWSTR fileName);

void WINAPI ClearFileAttributes(LPWSTR fileName);

HANDLE WINAPI FileCreateRewrite(LPCWSTR fileName);

void WINAPI FileClose(HANDLE handle);

void WINAPI FileWrite(HANDLE handle, LPWSTR text);

void WINAPI FileWriteNewLine(HANDLE handle);

BOOL WINAPI IsAnimatedGIF(LPWSTR fileName);

BOOL WINAPI FileOrFolderExists(LPWSTR fileName);

BOOL WINAPI DirectoryExists(LPWSTR fileName);

BOOL WINAPI IsDirectory(LPWSTR folderName);

BOOL WINAPI FileIsExe(LPWSTR fileName);

BOOL WINAPI FileIsIcon(LPWSTR fileName);

BOOL WINAPI IsValidFileName(LPWSTR fileName);

BOOL WINAPI IsValidPathName(LPWSTR fileName);

int WINAPI GetFilesCount(LPWSTR folderName);

BOOL WINAPI ResolveShellLink(LPWSTR lpszLinkFile, LPWSTR lpszPath, int iPathBufferSize);
 
void WINAPI CreateShellLink(PCIDLIST_ABSOLUTE lpszPathObj, LPWSTR lpszPathLink);

BOOL WINAPI GetFileNameFromPidl(LPCITEMIDLIST pidlRelative, LPWSTR lpszPath, int iPathBufferSize);

void WINAPI GetAllFiles(FOLDERENUMPROC lpEnumProc, LPWSTR folderName, LPWSTR searchMask, LPARAM lParam);

void WINAPI GetFileDescription(LPWSTR fileName);