src/Laugris.Sage/Internal/MoonRoad.cs

using System;
using System.Security;
using System.Runtime.InteropServices;
using System.Windows.Forms;
using System.Text;

namespace Laugris.Sage
{
    [UnmanagedFunctionPointer(CallingConvention.Winapi, CharSet = CharSet.Auto)]
    internal delegate void FolderEnumProc([MarshalAs(UnmanagedType.LPWStr)] string fileName, IntPtr lParam);

    [SuppressUnmanagedCodeSecurity]
    internal static partial class NativeMethods
    {
        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool StartEngine(IntPtr handle, [MarshalAs(UnmanagedType.LPWStr)] string applicationName);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, ExactSpelling = true)]
        public static extern void DrawLayeredWindow(IntPtr handle, int left, int top, int width, int height, IntPtr buffer, int colorKey, byte alpha, [MarshalAs(UnmanagedType.Bool)] bool redrawOnly);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, ExactSpelling = true)]
        public static extern void SetStartup([MarshalAs(UnmanagedType.LPWStr)] string appName,
                                             [MarshalAs(UnmanagedType.LPWStr)] string appPath);


        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, ExactSpelling = true)]
        public static extern void RemoveStartup([MarshalAs(UnmanagedType.LPWStr)] string appName);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool GetStartup([MarshalAs(UnmanagedType.LPWStr)] string appName);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool Matches([MarshalAs(UnmanagedType.LPWStr)] string itemText, [MarshalAs(UnmanagedType.LPWStr)] string searchText);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, ExactSpelling = true)]
        public static extern void GetFileDescription(StringBuilder fileName);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool GetApplicationFromWindow(IntPtr window, StringBuilder appName);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, ExactSpelling = true)]
        public static extern void CurrentIPAddress(StringBuilder address, int len);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, ExactSpelling = true)]
        public static extern void CreateShellLink(IntPtr PathObj, [MarshalAs(UnmanagedType.LPWStr)] string lpszPathLink);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool ResolveShellLink([MarshalAs(UnmanagedType.LPWStr)] string lpszLinkFile, StringBuilder lpszPath, int iPathBufferSize);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool GetFileNameFromPidl(IntPtr pidlRelative, StringBuilder lpszPath, int iPathBufferSize);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool PortAvailable(int port);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, ExactSpelling = true)]
        public static extern IntPtr LayeredWndProc(IntPtr hWnd, int msg, IntPtr wParam, IntPtr lParam);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, ExactSpelling = true)]
        public static extern int GetFilesCount([MarshalAs(UnmanagedType.LPWStr)] string folderName);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, ExactSpelling = true)]
        public static extern int GetAllFiles(FolderEnumProc callback ,[MarshalAs(UnmanagedType.LPWStr)] string folderName, [MarshalAs(UnmanagedType.LPWStr)] string searchMask, IntPtr lParam);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, ExactSpelling = true)]
        public static extern void RemoveSystemMenu(IntPtr handle);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool FileExists([MarshalAs(UnmanagedType.LPWStr)] string fileName);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool FileIsExe([MarshalAs(UnmanagedType.LPWStr)] string fileName);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool FileIsIcon([MarshalAs(UnmanagedType.LPWStr)] string fileName);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool IsValidFileName([MarshalAs(UnmanagedType.LPWStr)] string fileName);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool IsValidPathName([MarshalAs(UnmanagedType.LPWStr)] string fileName);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool IsAssembly([MarshalAs(UnmanagedType.LPWStr)] string FileName);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool IsAnimatedGIF([MarshalAs(UnmanagedType.LPWStr)] string fileName);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool FileOrFolderExists([MarshalAs(UnmanagedType.LPWStr)] string name);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool DirectoryExists([MarshalAs(UnmanagedType.LPWStr)] string name);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool IsDirectory([MarshalAs(UnmanagedType.LPWStr)] string name);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, ExactSpelling = true)]
        public static extern bool AddRemoveMessageFilter(int msg, ChangeWindowMessageFilterFlags flags);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern void DrawTextDirect(IntPtr hDC, [MarshalAs(UnmanagedType.LPWStr)] string s, IntPtr hFont, int color, int left, int top);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern void DrawTextDirectEx(IntPtr hDC, [MarshalAs(UnmanagedType.LPWStr)] string s, IntPtr hFont, int color, int background, int left, int top);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern void GetFullScreenSize(ref RECT rect);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool IsMultiTouchReady();

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool IsWow64();

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool IsWindows8();

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool IsMetroActive();

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool IsNativeWin64();

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool IsWindows7();

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool IsWindowsVista();

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool IsWindowsXP();

        [DllImport("MoonRoad.dll", EntryPoint = "IsWindowsXPSP2", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool IsWindowsXPServicePack2();

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool IsTabletPC();

        [DllImport("Moonroad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool IsMediaCenter();

        [DllImport("Moonroad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool IsUserPlayingFullscreen();

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool IsConnectedToInternet();

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern void CreateUnicodeFile([MarshalAs(UnmanagedType.LPWStr)] string fileName);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern void ClearFileAttributes([MarshalAs(UnmanagedType.LPWStr)] string fileName);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool IsUnicodeFile([MarshalAs(UnmanagedType.LPWStr)] string fileName);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern IntPtr FileCreateRewrite([MarshalAs(UnmanagedType.LPWStr)] string fileName);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern void FileClose(IntPtr handle);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern void FileWriteNewLine(IntPtr handle);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern void FileWrite(IntPtr handle, [MarshalAs(UnmanagedType.LPWStr)] string text);
